--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Se liga</h1>
     <p>recuperação é a ação d recuperar alguma coisa</p>
+    <h2>Por que estou no se liga?</h2>
+    <p>Por que eu não me dediquei no começo do ano</p>
+    <h2>O que fazer para não acontecer mais?</h2>
+
     <img src="https://www.imaculada.com.br/horarios-de-recuperacao-final/" alt="">
-    
 </body>
 </html>
