--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>se liga</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="corpo-site">
     <h1>Se liga</h1>
     <p>recuperação é a ação d recuperar alguma coisa</p>
     <h2>Por que estou no se liga?</h2>
@@ -14,5 +14,16 @@
     <h2>O que fazer para não acontecer mais?</h2>
 
     <img src="https://www.imaculada.com.br/horarios-de-recuperacao-final/" alt="">
+
+    <h2>lista de comprometimento de ações</h2>
+    <ul class="lista">
+        <li>estudar</li>
+        <li>se comportar</li>
+        <li>não ficar fazendo bagunça</li>
+        <li>prestrar atençaona matéria</li>
+        <li>dar dinheiro e presentas para os professores:)</li>
+    </ul>
+    <a href="https://www.educacao.pr.gov.br/Programa-Se-Liga">LINK SE LIGA SEED</a>
+
 </body>
 </html>
